<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dialog_background"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:padding="32dp">

        <TextView
            android:id="@+id/text_title_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_title_result"
            android:textColor="@color/theme"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/dialog_inside"
            android:elevation="4dp"
            android:paddingStart="8dp"
            android:paddingTop="16dp"
            android:paddingEnd="8dp"
            android:paddingBottom="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_title_result">

            <FrameLayout
                android:id="@+id/wrap_gauge"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.sccomponents.gauges.gr018.GR018
                    android:id="@+id/half_gauge"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="-32dp"
                    app:sccFontName="sans-serif-light"
                    app:sccGradientColor="true"
                    app:sccMaxValue="40"
                    app:sccMinValue="0"
                    app:sccText="@string/app_name"
                    app:sccTextColor="@color/result_value"
                    app:sccValueFormat="0.00" />

            </FrameLayout>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.51" />

            <TextView
                android:id="@+id/text_bmi_table"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:alpha="0.6"
                android:gravity="center_horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/guideline_result"
                tools:text="Normal (health weight)" />

            <View
                android:id="@+id/line"
                android:layout_width="120dp"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:alpha="0.3"
                android:background="@color/result_value"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_bmi_table" />

            <TextView
                android:id="@+id/text_title_bfp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/text_title_bfp"
                android:textColor="@color/result_value"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/line" />

            <TextView
                android:id="@+id/text_bfp_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:textColor="@color/result_value"
                android:textSize="28sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_title_bfp"
                tools:text="22.25" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:alpha="0.6"
                android:gravity="center_horizontal"
                android:text="@string/text_bfp_description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_bfp_result" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/text_percent"
                android:textStyle="bold"
                app:layout_constraintBaseline_toBaselineOf="@+id/text_bfp_result"
                app:layout_constraintStart_toEndOf="@+id/text_bfp_result" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
